# conceptnet-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  validate_production_readiness.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cloudflare-workers/: .env.example  .gitignore  README.md  deploy.sh  requirements.txt  wrangler.toml
cloudflare-workers/src/: main.py
docs/: api.md  index.md  installation.md  minimal_format_examples.md  usage.md
docs/tools/: concept_lookup.md  concept_query.md  concept_relatedness.md  related_concepts.md
src/conceptnet_mcp/: __init__.py  server.py
src/conceptnet_mcp/client/: __init__.py  conceptnet_client.py  pagination.py  processor.py
src/conceptnet_mcp/models/: __init__.py  concept.py  edge.py  query.py  response.py
src/conceptnet_mcp/tools/: __init__.py  concept_lookup.py  concept_query.py  concept_relatedness.py  related_concepts.py
src/conceptnet_mcp/utils/: __init__.py  exceptions.py  logging.py  text_utils.py
tests/: conftest.py
tests/unit/: test_exceptions.py  test_init.py  test_logging.py  test_text_utils.py
